--- a/app/css/less/common.less
+++ b/app/css/less/common.less
@@ -140,70 +140,6 @@ section {
   }
 }
 
-.or-a1 {
-  .line {
-
-    &:after {
-      top: 17px;
-      left: -96px;
-      transform: rotate(-20deg);
-    }
-  }
-
-  .circle {
-    left: -100px;
-    top: 31px;
-  }
-}
-
-.ol-a1 {
-  .line {
-
-    &:after {
-      top: 17px;
-      right: -96px;
-      transform: rotate(20deg);
-    }
-  }
-
-  .circle {
-    top: 31px;
-    right: -100px !important;
-  }
-}
-
-.or-a4 {
-  .line {
-
-    &:after {
-      top: -17px;
-      left: -96px;
-      transform: rotate(20deg);
-    }
-  }
-
-  .circle {
-    top: -40px;
-    left: -100px;
-  }
-}
-
-.ol-a4 {
-  .line {
-
-    &:after {
-      top: -17px;
-      right: -96px;
-      transform: rotate(-20deg);
-    }
-  }
-
-  .circle {
-    top: -40px;
-    right: -100px !important;
-  }
-}
-
 .o-left {
   .curve {
     .line {
@@ -235,10 +171,85 @@ section {
   }
 }
 
+
+
+.or-item {
+  h3 {
+    padding: 0 82px 0 0;
+    background-position: 104% 0;
+  }
+}
 .ol-item {
   h3 {
     padding: 0 0 0 82px;
     background-position: -7px 0;
+  }
+}
+
+.or-a1 {
+  .line {
+
+    &:after {
+      top: 17px;
+      left: -96px;
+      transform: rotate(-20deg);
+    }
+  }
+
+  .circle {
+    left: -100px;
+    top: 31px;
+  }
+  h3 {
+    background-position: 106% -63px;
+  }
+}
+
+.or-a2 {
+  h3 {
+    background-position: 104% -203px;
+  }
+}
+
+.or-a3 {
+  h3 {
+    background-position: 102% -327px;
+  }
+}
+
+.or-a4 {
+  h3 {
+    background-position: 108% -474px;
+  }
+  
+  .line {
+
+    &:after {
+      top: -17px;
+      left: -96px;
+      transform: rotate(20deg);
+    }
+  }
+
+  .circle {
+    top: -40px;
+    left: -100px;
+  }
+}
+
+.ol-a1 {
+  .line {
+
+    &:after {
+      top: 17px;
+      right: -96px;
+      transform: rotate(20deg);
+    }
+  }
+
+  .circle {
+    top: 31px;
+    right: -100px !important;
   }
 }
 
@@ -248,10 +259,29 @@ section {
   }
 }
 
-.or-item {
+.ol-a3 {
   h3 {
-    padding: 0 82px 0 0;
-    background-position: 104% 0;
+    background-position: -7px -267px;
+  }
+}
+
+.ol-a4 {
+  .line {
+
+    &:after {
+      top: -17px;
+      right: -96px;
+      transform: rotate(-20deg);
+    }
+  }
+
+  .circle {
+    top: -40px;
+    right: -100px !important;
+  }
+
+  h3 {
+    background-position: -7px -407px;
   }
 }
 
