added media queries for the create adaptive version

--- a/app/css/common.css
+++ b/app/css/common.css
@@ -19,56 +19,53 @@ section.offers h2 {
   padding-bottom: 10px;
   border-bottom: 3px solid #78c09c;
 }
+/* .o-items */
 .o-items {
+  position: relative;
   overflow: hidden;
 }
-.o-items article {
+/* .o-left */
+.o-left {
+  float: left;
+  width: 50%;
+}
+.o-left .curve .circle {
+  right: -6px;
+  left: auto;
+}
+/* .o-right */
+.o-right {
+  float: right;
+  width: 50%;
+}
+/* .o-item */
+.o-item {
   cursor: pointer;
   margin-bottom: 15px;
 }
-.o-items article p {
+.o-item p {
   font: 15px Georgia, sans-serif;
   height: 3.5em;
   padding-top: 12px;
   overflow: hidden;
 }
-.o-items article:hover h3 {
+.o-item:hover h3 {
   color: #d96683;
 }
-.o-items article:hover .line {
+.o-item:hover .line {
   background-color: #d96683;
 }
-.o-items article:hover .line:after {
+.o-item:hover .line:after {
   background-color: #d96683;
 }
-.o-items article:hover .circle {
+.o-item:hover .circle {
   z-index: 1;
   background-color: #d96683;
 }
-.o-items article:hover .circle:after {
+.o-item:hover .circle:after {
   border-color: #78c09c;
 }
-.o-items .o-left {
-  float: left;
-  width: 50%;
-}
-.o-items .o-right {
-  float: right;
-  width: 50%;
-}
-/*.ol-item*/
-.ol-item {
-  text-align: left;
-  float: left;
-}
-/*.or-item*/
-.or-item {
-  text-align: right;
-  float: right;
-}
-.or-item p {
-  text-align: left;
-}
+/* .curve */
 .curve {
   position: relative;
   width: 100%;
@@ -110,10 +107,6 @@ section.offers h2 {
   border: 2px solid #d96683;
   border-radius: 50%;
 }
-.o-left .curve .circle {
-  right: -6px;
-  left: auto;
-}
 .ol-item,
 .or-item {
   width: 70%;
@@ -129,14 +122,28 @@ section.offers h2 {
   text-transform: uppercase;
   color: #2fa781;
 }
+/*.ol-item*/
+.ol-item {
+  text-align: left;
+  float: left;
+}
+.ol-item h3 {
+  padding: 0 0 0 70px;
+  background-position: -7px 0;
+}
+/*.or-item*/
+.or-item {
+  text-align: right;
+  float: right;
+}
+.or-item p {
+  text-align: left;
+}
 .or-item h3 {
   padding: 0 82px 0 0;
   background-position: 104% 0;
 }
-.ol-item h3 {
-  padding: 0 0 0 82px;
-  background-position: -7px 0;
-}
+/* .or-a1 */
 .or-a1 .line:after {
   top: 17px;
   left: -96px;
@@ -149,12 +156,15 @@ section.offers h2 {
 .or-a1 h3 {
   background-position: 106% -63px;
 }
+/* .or-a2 */
 .or-a2 h3 {
   background-position: 104% -203px;
 }
+/* .or-a3 */
 .or-a3 h3 {
   background-position: 102% -327px;
 }
+/* .or-a4 */
 .or-a4 h3 {
   background-position: 108% -474px;
 }
@@ -167,6 +177,7 @@ section.offers h2 {
   top: -40px;
   left: -100px;
 }
+/* .ol-a1 */
 .ol-a1 .line:after {
   top: 17px;
   right: -96px;
@@ -176,12 +187,16 @@ section.offers h2 {
   top: 31px;
   right: -100px !important;
 }
+/* .ol-a2 */
 .ol-a2 h3 {
   background-position: -7px -132px;
+  padding-left: 54px;
 }
+/* .ol-a3 */
 .ol-a3 h3 {
   background-position: -7px -267px;
 }
+/* .ol-a4 */
 .ol-a4 .line:after {
   top: -17px;
   right: -96px;
@@ -193,11 +208,22 @@ section.offers h2 {
 }
 .ol-a4 h3 {
   background-position: -7px -407px;
+  padding-left: 60px;
 }
 /*.polygon*/
-.polygon {
-  margin: 100px -167px 0 -166px;
-  display: inline-block;
+.polygon,
+.polygon img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+.polygon img {
+  margin: auto;
+  display: block;
+  width: 333px;
+  height: auto;
 }
 /* classes */
 /*******************************************************************/
