--- a/app/css/media.css
+++ b/app/css/media.css
@@ -7,17 +7,19 @@
     margin-left: 2%;
     margin-right: 2%;
   }
+  .o-item h3 {
+    font-size: 16px;
+  }
 }
 /*  1060px */
 /*******************************************************************/
 @media only screen and (max-width: 1060px) {
+  .o-item h3 {
+    font-size: 14px;
+  }
   .polygon img {
     width: 283px;
     height: auto;
-  }
-  .ol-item h3,
-  .or-item h3 {
-    font-size: 16px;
   }
   .ol-a1 .line:after {
     top: 42px;
@@ -60,28 +62,26 @@
     left: -100px;
   }
 }
-/*  1000px */
-/*******************************************************************/
-@media only screen and (max-width: 1000px) {
-  .ol-item h3,
-  .or-item h3 {
-    font-size: 15px;
-  }
-}
 /*  960px */
 /*******************************************************************/
 @media only screen and (max-width: 960px) {
-  .ol-item h3,
-  .or-item h3 {
+  section.offers h2 {
+    border-bottom: none;
+    font-size: 28px;
+  }
+  .o-item h3 {
+    font-size: 13px;
+  }
+  .o-item p {
     font-size: 14px;
+    line-height: normal;
   }
 }
-/*  900px */
+/*  920px */
 /*******************************************************************/
-@media only screen and (max-width: 900px) {
-  .ol-item h3,
-  .or-item h3 {
-    font-size: 16px;
+@media only screen and (max-width: 920px) {
+  section.offers h2 {
+    font-size: 26px;
   }
   .polygon {
     display: none;
@@ -94,6 +94,13 @@
   }
   .o-item .circle {
     display: none;
+  }
+  .o-item h3 {
+    font-size: 15px;
+  }
+  .o-item p {
+    font-size: 15px;
+    line-height: normal;
   }
 }
 /*  768px */
@@ -112,15 +119,6 @@
   .container {
     margin-left: 5%;
     margin-right: 5%;
-  }
-  section.offers h2 {
-    border-bottom: none;
-    font-size: 28px;
-  }
-  .ol-item h3,
-  .or-item h3 {
-    font-size: 15px;
-    white-space: normal;
   }
   .o-right,
   .o-left {
@@ -159,24 +157,24 @@
 /*  480px */
 /*******************************************************************/
 @media only screen and (max-width: 480px) {
-  .o-item h3 {
-    padding: 0;
-    background-image: none;
-  }
   section.offers h2 {
     font-size: 24px;
+  }
+  .o-item h3 {
+    min-height: 35px;
+    line-height: 35px;
+    padding: 0;
+    background-image: none;
+    font-size: 14px;
+  }
+  .o-item p {
+    font-size: 14px;
+    line-height: normal;
   }
 }
 /*  350px */
 /*******************************************************************/
 @media only screen and (max-width: 350px) {
-  .ol-item h3,
-  .or-item h3,
-  .ol-item p,
-  .or-item p {
-    font-size: 14px;
-    line-height: normal;
-  }
   .o-items {
     margin-left: 2%;
     margin-right: 2%;
