--- a/app/css/media.css
+++ b/app/css/media.css
@@ -61,6 +61,9 @@
     top: -74px;
     left: -100px;
   }
+  .poly-svg {
+    width: 283px;
+  }
 }
 /*  960px */
 /*******************************************************************/
